skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_motion_settled.snap
---
source: tests/snapshot_overview.rs
expression: "common::render_model(&model)"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 2h25m  ·  Adhoc 1 · Issue 1 · Workflow 1  ·  stale-warn 4m  moon ▾                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Daemon                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions (3 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ detail ──────────────────────────────────┐"
"│Status                    ││Kind    State            Harness    Title                     PR/worktree               Age      Decision         Activity    ││Fix dashboard state reader                │"
"│▸ Needs input        1    ││ISS ⠋   Needs input      opencode   Fix dashboard state reade PR #44 · vst-101          1h35m    cleanup-prompt   4m          ││VST-101  ·  Issue  ·  Needs input         │"
"│Submitting         1      ││WF ⠋    Submitting       codex      Build Rust dashboard      —                         58m      bash-permission- 4m          ││substate: cleanup prompt                  │"
"│Running            1      ││AH ⠋    Running          pi         Watch daemon logs         —                         2h10m    —                4m          ││                                          │"
"│                          ││                                                                                                                              ││Where                                     │"
"│Merge queue               ││                                                                                                                              ││pane    %41                               │"
"│1. VST-101  Needs input   ││                                                                                                                              ││worktree                                  │"
"│2. VST-102  queued        ││                                                                                                                              ││/repo/worktrees/vst-101                   │"
"│                          ││                                                                                                                              ││cwd     /repo/worktrees/vst-101           │"
"│Conflicts                 ││                                                                                                                              ││                                          │"
"│• VST-101 ↔ VST-102       ││                                                                                                                              ││Issue                                     │"
"│                          ││                                                                                                                              ││PR #44                                    │"
"│                          ││                                                                                                                              ││scope declared=5 actual=7 (1.4x bigger    │"
"│                          ││                                                                                                                              ││than declared)                            │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Recent decisions                          │"
"│                          ││                                                                                                                              ││• cleanup-prompt → NO — sibling worktree  │"
"│                          ││                                                                                                                              ││still live                                │"
"│                          ││                                                                                                                              ││Click any decision for full text          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   / filter   ⇧M compact   ? help   q quit                                                                                           noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
